edit info courses , add cartificate search ,add cartificate , add diplmas and add my courses stydent.

--- a/info-courses.html
+++ b/info-courses.html
@@ -198,27 +198,78 @@
             <h5>محتوى الدورة</h5>
             <div>
                 <div class="row rounded">
-                    <div class="col-lg-1 d-flex justify-content-center align-items-center"><i class="fa-solid fa-caret-left"></i></div>
+                    <div class="col-lg-1 d-flex justify-content-center align-items-center my-3"><i class="fa-solid fa-caret-down"></i></div>
                     <div class="col-lg-8 d-flex justify-content-start align-items-center">شرح تصميم الموقع الالكتروني</div>
                     <div class="col-lg-2 d-flex justify-content-center align-items-center">9 دروس</div>
                     <div class="col-lg-1 d-flex justify-content-center align-items-center">
                         <input type="checkbox" class="rounded-circle">
                     </div>
+                    <div class="border-top bg-white visually-hidden">
+                        <div class="row mx-3 my-3">
+                            <div class="col-lg-7"><p>محتوي الوحدة</p></div>
+                            <div class="col-lg-3"><p>30% اكتمل من الدورة</p></div>
+                            <div class="col-lg-2">step 4/12</div>
+                        </div>
+                        <div class="row mx-3 my-3">
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"><i class="fa-regular fa-circle-play"></i></div>
+                            <div class="col-lg-10 d-flex justify-content-start align-items-center"><p class="text-muted">الوحدة الاولي : الدرس الاول</p></div>
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"> <input type="checkbox" class="rounded-circle"></div>
+                        </div>
+                        <div class="row mx-3 my-3">
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"><i class="fa-regular fa-circle-play"></i></div>
+                            <div class="col-lg-10 d-flex justify-content-start align-items-center"><p class="text-muted">الوحدة الاولي : الدرس الاول</p></div>
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"> <input type="checkbox" class="rounded-circle"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row rounded mt-3">
-                    <div class="col-lg-1 d-flex justify-content-center align-items-center"><i class="fa-solid fa-caret-left"></i></div>
+                    <div class="col-lg-1 d-flex justify-content-center align-items-center my-3"><i class="fa-solid fa-caret-down"></i></div>
                     <div class="col-lg-8 d-flex justify-content-start align-items-center">شرح تصميم الموقع الالكتروني</div>
                     <div class="col-lg-2 d-flex justify-content-center align-items-center">9 دروس</div>
                     <div class="col-lg-1 d-flex justify-content-center align-items-center">
                         <input type="checkbox" class="rounded-circle">
                     </div>
+                    <div class="border-top bg-white visually-hidden">
+                        <div class="row mx-3 my-3">
+                            <div class="col-lg-7"><p>محتوي الوحدة</p></div>
+                            <div class="col-lg-3"><p>30% اكتمل من الدورة</p></div>
+                            <div class="col-lg-2">step 4/12</div>
+                        </div>
+                        <div class="row mx-3 my-3">
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"><i class="fa-regular fa-circle-play"></i></div>
+                            <div class="col-lg-10 d-flex justify-content-start align-items-center"><p class="text-muted">الوحدة الاولي : الدرس الاول</p></div>
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"> <input type="checkbox" class="rounded-circle"></div>
+                        </div>
+                        <div class="row mx-3 my-3">
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"><i class="fa-regular fa-circle-play"></i></div>
+                            <div class="col-lg-10 d-flex justify-content-start align-items-center"><p class="text-muted">الوحدة الاولي : الدرس الاول</p></div>
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"> <input type="checkbox" class="rounded-circle"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row rounded mt-3">
-                    <div class="col-lg-1 d-flex justify-content-center align-items-center"><i class="fa-solid fa-caret-left"></i></div>
+                    <div class="col-lg-1 d-flex justify-content-center align-items-center my-3"><i class="fa-solid fa-caret-down"></i></div>
                     <div class="col-lg-8 d-flex justify-content-start align-items-center">شرح تصميم الموقع الالكتروني</div>
                     <div class="col-lg-2 d-flex justify-content-center align-items-center">9 دروس</div>
                     <div class="col-lg-1 d-flex justify-content-center align-items-center">
                         <input type="checkbox" class="rounded-circle">
+                    </div>
+                    <div class="border-top bg-white visually-hidden">
+                        <div class="row mx-3 my-3">
+                            <div class="col-lg-7"><p>محتوي الوحدة</p></div>
+                            <div class="col-lg-3"><p>30% اكتمل من الدورة</p></div>
+                            <div class="col-lg-2">step 4/12</div>
+                        </div>
+                        <div class="row mx-3 my-3">
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"><i class="fa-regular fa-circle-play"></i></div>
+                            <div class="col-lg-10 d-flex justify-content-start align-items-center"><p class="text-muted">الوحدة الاولي : الدرس الاول</p></div>
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"> <input type="checkbox" class="rounded-circle"></div>
+                        </div>
+                        <div class="row mx-3 my-3">
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"><i class="fa-regular fa-circle-play"></i></div>
+                            <div class="col-lg-10 d-flex justify-content-start align-items-center"><p class="text-muted">الوحدة الاولي : الدرس الاول</p></div>
+                            <div class="col-lg-1 d-flex justify-content-center align-items-center"> <input type="checkbox" class="rounded-circle"></div>
+                        </div>
                     </div>
                 </div>
             </div>
