--- a/diplomas.html
+++ b/diplomas.html
@@ -182,8 +182,111 @@
         </section>
     </section>
 </section>
-<section class="container m-auto">
-
+<section class="container m-auto mt-4">
+<div class="w-100 d-flex justify-content-start align-items-center">
+    <h4>الدورات</h4>
+</div>
+<div class="row">
+    <div class="col-12 col-md-3 col-lg-4">
+        <div class="h-50 position-relative">
+            <img src="assets/images/course1.png" alt="" class="h-100 w-100">
+            <div class="position-absolute top-0 end-0 mt-2 me-2">
+                <div onclick="liked()" class=" like rounded-circle  d-flex justify-content-center align-items-center" >
+                    <i class="fa-solid fa-heart" id="like" ></i>
+                </div>
+            </div>
+        </div>
+        <div class="h-50 mt-4">
+            <h5>مهارات إدارة المشاريع ونجاحها</h5>
+            <div class="d-flex mt-3">
+                <img src="assets/images/Paper.png" alt="" >
+                <p class="ms-2 text-muted">8 وحدات-16 دروس</p>
+            </div>
+            <div class="row d-flex mt-4 mx-0 px-0">
+                <div class="col-3 d-flex justify-content-start align-items-center">
+                    <p class="w-100 fs-5">اكملت</p>
+                </div>
+                <div class="col-6 d-flex justify-content-start align-items-center">
+                    <p class="w-100 h-100">
+                        <progress value="70" max="100" class="w-100 h-100"></progress>
+                    </p>
+                </div>
+                <div class="col-2 d-flex justify-content-start align-items-center">
+                    <p class="w-100">70%</p>
+                </div>
+            </div>
+            <div class="mt-3">
+                <p class="text-primary ">اخر نشاط لك 2022,11 يونيو</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col-md-3 col-lg-4">
+        <div class="h-50 position-relative">
+            <img src="assets/images/course1.png" alt="" class="h-100 w-100">
+            <div class="position-absolute top-0 end-0 mt-2 me-2">
+                <div onclick="liked()" class=" like rounded-circle  d-flex justify-content-center align-items-center" >
+                    <i class="fa-solid fa-heart" id="like" ></i>
+                </div>
+            </div>
+        </div>
+        <div class="h-50 mt-4">
+            <h5>مهارات إدارة المشاريع ونجاحها</h5>
+            <div class="d-flex mt-3">
+                <img src="assets/images/Paper.png" alt="" >
+                <p class="ms-2 text-muted">8 وحدات-16 دروس</p>
+            </div>
+            <div class="row d-flex mt-4 mx-0 px-0">
+                <div class="col-3 d-flex justify-content-start align-items-center">
+                    <p class="w-100 fs-5">اكملت</p>
+                </div>
+                <div class="col-6 d-flex justify-content-start align-items-center">
+                    <p class="w-100 h-100">
+                        <progress value="70" max="100" class="w-100 h-100"></progress>
+                    </p>
+                </div>
+                <div class="col-2 d-flex justify-content-start align-items-center">
+                    <p class="w-100">70%</p>
+                </div>
+            </div>
+            <div class="mt-3">
+                <p class="text-primary ">اخر نشاط لك 2022,11 يونيو</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col-md-3 col-lg-4">
+        <div class="h-50 position-relative">
+            <img src="assets/images/course1.png" alt="" class="h-100 w-100">
+            <div class="position-absolute top-0 end-0 mt-2 me-2">
+                <div onclick="liked()" class=" like rounded-circle  d-flex justify-content-center align-items-center" >
+                    <i class="fa-solid fa-heart" id="like" ></i>
+                </div>
+            </div>
+        </div>
+        <div class="h-50 mt-4">
+            <h5>مهارات إدارة المشاريع ونجاحها</h5>
+            <div class="d-flex mt-3">
+                <img src="assets/images/Paper.png" alt="" >
+                <p class="ms-2 text-muted">8 وحدات-16 دروس</p>
+            </div>
+            <div class="row d-flex mt-4 mx-0 px-0">
+                <div class="col-3 d-flex justify-content-start align-items-center">
+                    <p class="w-100 fs-5">اكملت</p>
+                </div>
+                <div class="col-6 d-flex justify-content-start align-items-center">
+                    <p class="w-100 h-100">
+                        <progress value="70" max="100" class="w-100 h-100"></progress>
+                    </p>
+                </div>
+                <div class="col-2 d-flex justify-content-start align-items-center">
+                    <p class="w-100">70%</p>
+                </div>
+            </div>
+            <div class="mt-3">
+                <p class="text-primary ">اخر نشاط لك 2022,11 يونيو</p>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
 
 
@@ -199,7 +302,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 -->
 
-
+<script>
+    function liked(){
+        document.getElementById('like').style.color = 'red'; // forecolor
+    }
+</script>
 
 </body>
 </html>
